fix some layout bugs

--- a/app/print-styles.css
+++ b/app/print-styles.css
@@ -32,6 +32,7 @@
   }
 
   .extra-not-break {
+    margin-top: 2rem;
     page-break-inside: avoid;
   }
 
